--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@breq/roslib",
   "homepage": "https://github.com/Breq16/roslib",
   "description": "A modern TypeScript library for ROS",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "BSD-2-Clause",
   "dependencies": {
     "@xmldom/xmldom": "^0.8.0",
@@ -10,7 +10,8 @@
     "cbor-js": "^0.1.0",
     "eventemitter2": "^6.4.0",
     "isomorphic-ws": "^4.0.1",
-    "pngparse": "^2.0.0"
+    "pngparse": "^2.0.0",
+    "workersocket": "^0.1.1"
   },
   "keywords": [
     "ROS",
