--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@breq/roslib",
-  "homepage": "https://github.com/Breq16/roslib",
+  "homepage": "https://github.com/breqdev/roslib",
   "description": "A modern TypeScript library for ROS",
   "version": "0.1.4",
   "license": "BSD-2-Clause",
