add explicit root dir?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,12 @@ jobs:
       - name: Submit code coverage
         uses: codecov/codecov-action@v3
         with:
-          # token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
           directory: ./coverage
           files: ./coverage-final.json
           fail_ci_if_error: true
           verbose: true
+          root_dir: .
       - name: Publish to NPM
         if: ${{ github.event_name == 'release' }}
         run: npm publish --access public
